footer margin fix svg visibility on mobile check

--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -32,13 +32,15 @@
     flex-direction: column;
     align-items: flex-start;
 
-    &:not(:last-child) {
-      margin-bottom: 16px;
+    margin-bottom: 16px;
 
-      // @include tablet {
-      //   margin-bottom: 4px;
-      // }
-    }
+    // &:not(:last-child) {
+    //   margin-bottom: 16px;
+
+    //   // @include tablet {
+    //   //   margin-bottom: 4px;
+    //   // }
+    // }
   }
 
   & &__title {
