--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -170,6 +170,16 @@
     width: 16px;
     height: 16px;
 
+    @include tablet {
+      width: 14px;
+      height: 14px;
+    }
+
+    @include mobile {
+      width: 12px;
+      height: 12px;
+    }
+
     background-color: currentColor;
 
     mask: url("../icons/arrow-bottom-right.svg") center/contain no-repeat;
