--- a/styles/blocks/_reviews.scss
+++ b/styles/blocks/_reviews.scss
@@ -168,6 +168,16 @@
   flex-shrink: 0;
   // margin-top: 5px;
 
+  @include tablet {
+    width: 14px;
+    height: 14px;
+  }
+
+  @include mobile {
+    width: 12px;
+    height: 12px;
+  }
+
   background-color: currentColor;
 
   mask: url("../icons/arrow-bottom-right.svg") center/contain no-repeat;
@@ -307,6 +317,13 @@
   width: 24px;
   height: 24px;
   fill: currentColor;
+}
+
+.reviews-nav button svg path {
+  stroke: currentColor;
+  width: 24px;
+  height: 24px;
+  display: block;
 }
 
 .reviews-nav .prev {
